Changelog
=========

HEAD
~~~~

- Use ``sourcecodegen`` package to generate Python-code from AST; this
  is done to avoid generating code using the ``compiler.pycodegen``
  module, which has serious issues. Interestingly, this approach cuts
  compilation time in half. [malthe]

- Bind code-generation utilities in closure as well. [malthe]

- Reworked global scope initialization; we now bind these using a
  closure. [malthe]

- Reworked repeat-variable logic. An iterator would be realized at any
  rate, so let's not try to be clever. [malthe]

- Made repeat-variable work with iterables which do not announce their
  length before execution. [malthe]

- Added namespace attribute support. [malthe]

- Static attributes are now computed such that attributes are omitted
  according to a `ns_omit` flag, and they are always prefixed
  according to the element's `nsmap`. [malthe]

- Do not fix-up self-closing tags if an XML declaration is present
  without a DOCTYPE. [malthe]

- Prefix tags which do not belong to the default namespace. [malthe]

1.0b10 (released 24/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Do not apply namespace attribute 'xmlns' to root element if not
  set. [malthe]

- Fixed tuple unpacking in repeat loops. [malthe]

- Use a custom simple BufferIO class for the lxml.etree parser instead of
  standard StringIO. [hannosch]

- This was the wrong fix, however; what needed to be changed is that
  the class of the marker isntance must be available at
  module-scope. [malthe]

- Changed generation.marker back to a normal object instance. Otherwise we get
  PicklingError: Can't pickle <class 'chameleon.core.generation.marker'>:
  it's not the same object as chameleon.core.generation.marker. [hannosch]

- Changed two isinstance checks to check for basestring instead of str or
  unicode. [hannosch]

1.0b9 (released 19/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added ``label`` property to expressions; this allows providing a